# easymoney

./: Cargo.toml  README.md  my_database.db
.github/workflows/: rust.yml
src/: app.rs  db.rs  event.rs  format.rs  labeling.rs  main.rs  models.rs  tui.rs
src/app/: app.rs  button.rs  categoryfield.rs  chart.rs  color.rs  footer.rs  popup.rs  stringfield.rs  table.rs
src/format/: credit.rs  debit.rs  format.rs
src/models/: category.rs  csvtype.rs  group.rs  kind.rs  newtransaction.rs  transaction.rs
