[package]
name = "easymoney"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.41"
color-eyre = "0.6.5"
crossterm = { version = "0.29.0", features = ["event-stream"] }
dirs-next = "2.0.0"
futures = "0.3.31"
itertools = "0.14.0"
polars = { version = "0.41", features = ["abs", "lazy", "strings"] }
ratatui = "0.29.0"
rusqlite = { version = "0.37.0", features = ["chrono"] }
serde = "1.0.219"
strum = { version = "0.27.2", features = ["std", "derive"] }
strum_macros = "0.27.2"
tokio = { version = "1.47.1", features = ["full"] }
tokio-macros = "2.5.0"
